--- a/index.html
+++ b/index.html
@@ -4,67 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Нэвтрэх</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e9eff1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background: white;
-            padding: 40px;
-            width: 400px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        .login-container h2 {
-            font-size: 28px;
-            color: #1877f2;
-            margin-bottom: 20px;
-        }
-        input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-        input:focus {
-            border-color: #1877f2;
-            outline: none;
-        }
-        .login-btn {
-            width: 100%;
-            padding: 12px;
-            background: #1877f2;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-        .login-btn:hover {
-            background: #166fe5;
-        }
-        .forgot-password {
-            margin-top: 10px;
-            font-size: 14px;
-            color: #1877f2;
-            text-decoration: none;
-        }
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- CSS файлыг оруулна -->
 </head>
 <body>
 
@@ -76,6 +16,6 @@
         <a href="#" class="forgot-password">Нууц үгээ мартсан уу?</a>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- JavaScript файлыг оруулна -->
 </body>
 </html>
