--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Нэвтрэх</title>
-    <link rel="stylesheet" href="styles.css"> <!-- CSS файлыг оруулна -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -16,6 +16,6 @@
         <a href="#" class="forgot-password">Нууц үгээ мартсан уу?</a>
     </div>
 
-    <script src="script.js"></script> <!-- JavaScript файлыг оруулна -->
+    <script src="script.js"></script>
 </body>
 </html>
